<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/imgLogo"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/logotext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvsilahkan"
            android:layout_below="@+id/imgLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan_login_untuk_menggunakan_aplikasi"
            android:textAlignment="center" />
        
        <EditText
            android:autofillHints="@string/hint_username"
            android:hint="@string/hint_username"
            android:drawableStart="@drawable/ic_person"
            android:id="@+id/etUsername"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvsilahkan"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="text"/>

        <EditText
            android:inputType="textPassword"
            android:autofillHints="@string/hint_password"
            android:hint="@string/hint_password"
            android:drawableStart="@drawable/ic_person"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etPassword"
            android:id="@+id/btnLogin"
            android:background="@drawable/btn_sign_in"
            />

        <TextView
            android:layout_below="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:text="@string/create_a_new_account"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</ScrollView>